--- a/css/homepage.css
+++ b/css/homepage.css
@@ -80,7 +80,7 @@ header {
 
 blockquote {
     font-style: italic;
-    padding: 3em;
+    padding: 3em 0 1em;
     font-weight: 300;
     letter-spacing: 3px;
     font-size: 25px;
@@ -88,4 +88,10 @@ blockquote {
 
 blockquote i {
     padding: 0 1em;
+}
+
+#quote-author {
+    font-style: italic;
+    font-size: 14px;
+    letter-spacing: 2px;
 }
